ITERATORS -> bs on return to solve + functions todo | MAP -> upper lower bound equal range / overloads of existing functions / operator overloads of class map

--- a/containers/.vscode/settings.json
+++ b/containers/.vscode/settings.json
@@ -36,6 +36,8 @@
 		"tuple": "cpp",
 		"type_traits": "cpp",
 		"typeinfo": "cpp",
-		"utility": "cpp"
-	}
+		"utility": "cpp",
+		"iterator": "cpp"
+	},
+	"cmake.configureOnOpen": false
 }
